--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typescript": "^4.5.2"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "start": "tsc -w & python -m http.server"
   }
 }
